--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -42,7 +42,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    if: "${{ github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && inputs.dry-run == false)}}"
+    if: "${{ (github.event_name == 'push' && github.ref_name == 'main') || (github.event_name == 'workflow_dispatch' && inputs.dry-run == false)}}"
 
     environment:
       name: github-pages
