feat: add discord, remove instagram

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -16,10 +16,10 @@ params:
       - github: https://github.com/mirceanton
       - link: https://mirceanton.com
       - youtube: https://www.youtube.com/@mirceanton
+      - discord: https://discordapp.com/users/637553176991629312
       - email: "mailto:mircea@mirceanton.com"
       - steam: https://steamcommunity.com/id/mikeanth/
       - reddit: https://www.reddit.com/user/MikeAnth/
-      - spotify: https://open.spotify.com/user/jpa2p7j8yrjjce6qtfze0uea5?si=055a00896caf4a1f
       - instagram: https://instagram.com/_mirceanton
       - linkedin: https://www.linkedin.com/in/mirceanton
 
